# islamic-digitizer

./: .env.example  .gitignore  README.md  main.py  modal_app.py  next.config.ts  ocr_server.py  package-lock.json  package.json  pyproject.toml
.gradio/flagged/: dataset1.csv
orc_modal/: main.py  modal_app.py  ocr.py
src/: instrumentation.ts
src/app/: globals.scss  layout.tsx  page.module.scss  page.tsx
src/app/api/digitize/: route.ts
src/app/api/digitize/[jobId]/: route.ts
src/components/ExportPanel/: ExportPanel.module.scss  ExportPanel.tsx
src/components/FileUploader/: FileUploader.module.scss  FileUploader.tsx
src/components/Header/: Header.module.scss  Header.tsx
src/components/PageNavigator/: PageNavigator.module.scss  PageNavigator.tsx  index.ts
src/components/ProcessingStatus/: ProcessingStatus.module.scss  ProcessingStatus.tsx  index.ts
src/components/ResultViewer/: ResultViewer.module.scss  ResultViewer.tsx  index.ts
src/hooks/: useDigitizer.ts
src/lib/: gemini.ts
src/styles/: _variables.scss
src/types/: index.ts
src/utils/: imageUtils.ts  pdfUtils.ts
